# lithos-lens

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  lithos-lens.example.toml  pyproject.toml
.claude/skills/regen-manual/: SKILL.md  manual-template.md
docker/: .env.example  Dockerfile  docker-compose.yml  run.sh
docs/: IMPLEMENTATION_CHECKLIST.md  REQUIREMENTS.md  ROADMAP.md  SPECIFICATION.md  architecture.toml  vendor-assets.md
docs/agents/: issue-tracker.md  triage-labels.md
docs/prd/: k1-knowledge-note-view.md  milestone-1-5-planning-view.md  milestone-1-operator-view.md  milestone-3-llm-curation-and-desktop-notifications.md  t1-graph-native-operator-view.md
docs/user-manual/: manual.md
src/lithos_lens/: __init__.py  __main__.py  config.py  errors.py  events.py  lithos_client.py  logging.py  main.py  state.py  tasks.py  telemetry.py  web.py
src/lithos_lens/static/: lens.css  tasks.js
src/lithos_lens/templates/: base.html  note.html
src/lithos_lens/templates/tasks/: dashboard.html  detail.html  findings.html  row.html
tests/: conftest.py  test_common_core.py  test_main.py  test_tasks_mvp.py  test_tasks_sse.py
tests/guardrail/: _diagram_toolkit.py  _metrics_render.py  test_architecture_diagram.py
