[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lithos-lens"
version = "0.1.0"
description = "Lithos Lens"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Dave Snowdon" }]
dependencies = [
    "python-dotenv>=1.0",
]

[project.scripts]
lithos-lens = "lithos_lens.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lithos_lens"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
